here's hoping this doesn't break something else :grimacing:

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -2781,7 +2781,8 @@ label.ak-survey-radio-choice{
 .form-style-labelabove .input-radio label{
   font-size:0.85em;
   font-weight:bold;
-  position:relative;}
+  position:relative;
+  display: inline-block;}
 .form-style-labelabove .input-checkbox label input,
 .form-style-labelabove .input-radio label input{
   left:0;
