--- a/assets/strikes/strike-ak.css
+++ b/assets/strikes/strike-ak.css
@@ -36,3 +36,14 @@ html,body,.text-font-body{
 	border-bottom:2px solid #4ee58b;
 	color:#231F20;
 	text-decoration:none;}
+	
+/* Map styles */	
+#map-embed-350org .event-list-item-cta a.event-list-item-cta-btn{
+	color: #000 !important;
+	border: 2px solid #000 !important;
+	text-shadow: none !important;
+}
+
+#map-embed-350org .event-list-item-cta a.event-list-item-cta-btn{
+  background-color: #4ee58b;
+}
