--- a/assets/strikes/strike-ak.css
+++ b/assets/strikes/strike-ak.css
@@ -60,13 +60,14 @@ h2.event-list-item-title, h3.event-list-item-title {
 }
 
 #map-embed-350org .search-text{
-	color: #333;
+	color: #333 !important;
 }
 
 #map-embed-350org .filter-form ul li label{
-	color: #333;	
+	color: #333;
+	font-weight: 600 !important;
 }
 
 #map-embed-350org .filter-form ul li input:checked + label{
-	font-weight: 600;
+	font-weight: 800 !important;
 }
