--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* 350 AK stylesheet */
+/* 350 AK stylesheet - testing donation page dev templateset */
 
 * {
   -webkit-box-sizing: border-box;
