--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4922,6 +4922,48 @@ input:checked+.toggle-donation-type .toggle-monthly {
   color: #fff;
 }
 
+/* Monthly donation bubble */
+#donation-toggle-bubble {
+  position: relative;
+  background-color: #F7F7F7;
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  border: #DEE5EA solid 1px;
+  font-size: 80%;
+}
+
+#donation-toggle-bubble:before,
+#donation-toggle-bubble:after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 10px;
+  left: 60%;
+  width: 0;
+  height: 0;
+}
+
+#donation-toggle-bubble:before {
+  border-color: transparent transparent #F7F7F7 transparent;
+  top: -20px;
+  z-index: 2;
+}
+
+#donation-toggle-bubble:after {
+  border-color: transparent transparent #DEE5EA transparent;
+  z-index: -2;
+  top: -21px;
+}
+
+#monthly-heart {
+  width: 50px;
+  height: 50px;
+  margin-right: 8%;
+}
+
 @media screen and (max-width:720px) {
 
   #action-after-header {
