--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4948,19 +4948,20 @@ input:checked+.toggle-donation-type .toggle-monthly {
 
 #donation-toggle-bubble:before {
   border-color: transparent transparent #F7F7F7 transparent;
-  top: -20px;
   z-index: 2;
+  top: -20px;
+
 }
 
 #donation-toggle-bubble:after {
   border-color: transparent transparent #DEE5EA transparent;
-  z-index: -2;
+  z-index: 0;
   top: -21px;
 }
 
 #monthly-heart {
-  width: 50px;
-  height: 50px;
+  /* width: 50px;
+  height: 50px; */
   margin-right: 8%;
 }
 
