--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4932,7 +4932,7 @@ input:checked+.toggle-donation-type .toggle-monthly {
   display: flex;
   align-items: center;
   border: #DEE5EA solid 1px;
-  font-size: 80%;
+  font-size: 75%;
 }
 
 #donation-toggle-bubble:before,
@@ -4960,9 +4960,11 @@ input:checked+.toggle-donation-type .toggle-monthly {
 }
 
 #monthly-heart {
-  /* width: 50px;
-  height: 50px; */
-  margin-right: 8%;
+  margin-right: 7%;
+}
+
+#bubble-text {
+  flex: 1;
 }
 
 @media screen and (max-width:720px) {
