style: fix bubble arrow position, add responsiveness

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4941,9 +4941,18 @@ input:checked+.toggle-donation-type .toggle-monthly {
   position: absolute;
   border-style: solid;
   border-width: 10px;
-  left: 60%;
+  left: calc(50% - 10px + 75px);
   width: 0;
   height: 0;
+}
+
+@media screen and (max-width:400px) {
+
+  #donation-toggle-bubble:before,
+  #donation-toggle-bubble:after {
+    left: calc(75% - 10px);
+  }
+
 }
 
 #donation-toggle-bubble:before {
