feat: add tick when step is complete when clicking continue

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4714,6 +4714,11 @@ label.ak-survey-radio-choice {
   max-width: 100%;
 }
 
+/* Complete tick for donate step complete */
+.ak-step-complete {
+  font-size: 0.62em;
+}
+
 /* Donate */
 
 
