fix: making tick white on all devices, prevent tick showing when errors

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4717,6 +4717,7 @@ label.ak-survey-radio-choice {
 /* Complete tick for donate step complete */
 .ak-step-complete {
   font-size: 0.62em;
+  color: #fff;
 }
 
 /* Donate */
