--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4914,6 +4914,9 @@ label.ak-radio-checked {
   transition: .3s;
   border: #DEE5EA solid 1px;
   font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input:checked+.toggle-donation-type .toggle-option-1 {
@@ -4939,8 +4942,9 @@ input:checked+.toggle-donation-type .toggle-option-2 {
   font-size: 75%;
 }
 
-#donation-toggle-bubble:before,
-#donation-toggle-bubble:after {
+/* Once default styles for bubble arrow */
+#donation-toggle-bubble.default-once:before,
+#donation-toggle-bubble.default-once:after {
   content: "";
   position: absolute;
   border-style: solid;
@@ -4952,13 +4956,35 @@ input:checked+.toggle-donation-type .toggle-option-2 {
 
 @media screen and (max-width:400px) {
 
-  #donation-toggle-bubble:before,
-  #donation-toggle-bubble:after {
+  #donation-toggle-bubble.default-once:before,
+  #donation-toggle-bubble.default-once:after {
     left: calc(75% - 10px);
   }
 
 }
 
+/* Monthly default styles for bubble arrow */
+#donation-toggle-bubble.default-monthly:before,
+#donation-toggle-bubble.default-monthly:after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 10px;
+  left: calc(50% - 10px - 75px);
+  width: 0;
+  height: 0;
+}
+
+@media screen and (max-width:400px) {
+
+  #donation-toggle-bubble.default-monthly:before,
+  #donation-toggle-bubble.default-monthly:after {
+    left: calc(25% - 10px);
+  }
+
+}
+
+/* Common styles for bubble arrow */
 #donation-toggle-bubble:before {
   border-color: transparent transparent #F7F7F7 transparent;
   z-index: 2;
