--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4422,6 +4422,12 @@ label.ak-survey-radio-choice {
   color: #fff;
 }
 
+/* Set background color for non Donate pages for new accessible background page color option  */
+.bg-new_accessible_desktop-fade {
+  background-color: rgba(15, 129, 232, 0.7);
+  color: #fff;
+}
+
 .bg-orange-fade {
   background-color: rgba(255, 169, 2, 0.7);
   color: #fff;
@@ -4434,13 +4440,15 @@ label.ak-survey-radio-choice {
 
 .bg-blue-fade a,
 .bg-orange-fade a,
-.bg-teal-fade a {
+.bg-teal-fade a,
+.bg-new_accessible_desktop-fade a {
   color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-blue-fade a:hover,
 .bg-teal-fade a:hover,
-.bg-orange-fade a:hover {
+.bg-orange-fade a:hover,
+.bg-new_accessible_desktop-fade a {
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -5034,6 +5042,12 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     background-image: linear-gradient(to bottom, rgba(15, 129, 232, 0.5) 0%, rgba(15, 129, 232, 0.95) 500px, rgba(15, 129, 232, 0.95) 100%);
   }
 
+  /* Set background color for non Donate pages for new accessible background page color option  */
+  .bg-new_accessible_desktop-fade {
+    background-color: transparent;
+    background-image: linear-gradient(to bottom, rgba(15, 129, 232, 0.5) 0%, rgba(15, 129, 232, 0.95) 500px, rgba(15, 129, 232, 0.95) 100%);
+  }
+
   .bg-teal-fade {
     background-color: transparent;
     background-image: linear-gradient(to bottom, rgba(64, 215, 212, 0.5) 0%, rgba(64, 215, 212, 0.95) 500px, rgba(64, 215, 212, 0.95) 100%);
@@ -5411,6 +5425,7 @@ a.bg-white:hover {
 }
 
 .bg-blue,
+.bg-new_accessible_desktop,
 .button.bg-blue {
   background-color: rgb(15, 129, 233);
   border-color: rgba(255, 255, 255, 0.15);
@@ -5440,12 +5455,14 @@ a.text-blue:hover {
 
 /* Link Color */
 .bg-blue a,
+.bg-new_accessible_desktop a,
 .bg-blue.text-color-override a {
   color: rgba(255, 255, 255, 0.75);
 }
 
 /* Link:hover Color */
 .bg-blue a:hover,
+.bg-new_accessible_desktop a:hover,
 .bg-blue.text-color-override a:hover {
   color: rgba(255, 255, 255, 0.3);
 }
