Update button color for Whatsapp share button

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -1495,6 +1495,10 @@ a.bg-sina-weibo-color:hover {
   color: rgba(255, 255, 255, 0.7) !important;
 }
 
+a.whatsapp-share {
+  color: #fff !important;
+}
+
 .bg-whatsapp-color {
   background-color: #1ebea5;
 }
