Update CSS link back to original; fix checkbox on 1st step of donate page

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -5871,6 +5871,12 @@ a.bg-midgray:hover {
   height: 0;
   width: 0;
 }
+#in-honor-of .input-checkbox input {
+  opacity: 1;
+}
+#in-honor-of .input-checkbox {
+  padding-left: 20px;
+}
 .checkmark {
   position: absolute;
   top: 5px;
