--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -2331,7 +2331,9 @@ a.tf-logo:hover {
   display: inline-block;
 }
 
-
+footer.bg-blue_opaque {
+  background-color: #0f81e8;
+}
 /* Mobile Only */
 @media only screen and (max-width:720px) {
   .mobile-hide {
@@ -4442,6 +4444,13 @@ label.ak-survey-radio-choice {
   background-color: rgba(15, 129, 232, 0.7);
   color: #fff;
 }
+.bg-blue_opaque-fade .section-inner {
+  background-color: #0F81E9;
+  color: #fff;
+  padding: 48px 0 0;
+  border-radius: 64px;
+  max-width: 1000px;
+}
 
 .bg-orange-fade {
   background-color: rgba(255, 169, 2, 0.7);
@@ -5477,6 +5486,28 @@ a.bg-blue {
 
 /* Button:hover Text Color */
 a.bg-blue:hover {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+/* Blue Opaque Colors */
+.bg-blue_opaque a,
+.bg-blue_opaque.text-color-override a {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+/* Link:hover Color */
+.bg-blue_opaque a:hover,
+.bg-blue_opaque.text-color-override a:hover {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/* Button Text Color */
+a.bg-blue_opaque, .bg-blue_opaque-fade a {
+  color: #ffffff;
+}
+
+/* Button:hover Text Color */
+a.bg-blue_opaque:hover {
   color: rgba(255, 255, 255, 0.75);
 }
 
