--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -107,7 +107,7 @@ h5 a {
   text-decoration: none;
 }
 
-h1:last-child. h2:last-child,
+h1:last-child.h2:last-child,
 h3:last-child {
   margin-bottom: 0;
 }
@@ -5196,7 +5196,7 @@ input:checked+.toggle-donation-type .toggle-option-2 {
 
   .bg-orange-fade {
     background-color: transparent;
-    background-image: lin©ear-gradient(to bottom, rgba(255, 169, 2, 0.5) 0%, rgba(255, 169, 2, 0.95) 500px, rgba(255, 169, 2, 0.95) 100%);
+    background-image: linear-gradient(to bottom, rgba(255, 169, 2, 0.5) 0%, rgba(255, 169, 2, 0.95) 500px, rgba(255, 169, 2, 0.95) 100%);
   }
 
 
