--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -2331,9 +2331,12 @@ a.tf-logo:hover {
   display: inline-block;
 }
 
-footer.bg-blue_opaque {
+.Signup footer.bg-blue_opaque,
+.Petition footer.bg-blue_opaque,
+.Letter footer.bg-blue_opaque {
   background-color: #0f81e8;
 }
+
 /* Mobile Only */
 @media only screen and (max-width:720px) {
   .mobile-hide {
@@ -4444,7 +4447,9 @@ label.ak-survey-radio-choice {
   background-color: rgba(15, 129, 232, 0.7);
   color: #fff;
 }
-.bg-blue_opaque-fade .section-inner {
+.Signup .bg-blue_opaque-fade .section-inner,
+.Petition .bg-blue_opaque-fade .section-inner,
+.Letter .bg-blue_opaque-fade .section-inner {
   background-color: #0F81E9;
   color: #fff;
   padding: 48px 36px;
@@ -4453,17 +4458,29 @@ label.ak-survey-radio-choice {
   display: flex;
   flex-wrap: wrap;
 }
-.bg-blue_opaque-fade .section-inner #action-header {
+
+.Signup .bg-blue_opaque-fade .section-inner #action-header,
+.Petition .bg-blue_opaque-fade .section-inner #action-header,
+.Letter .bg-blue_opaque-fade .section-inner #action-header {
   max-width: 520px;
   padding: 0 24px;
 }
-.bg-blue_opaque-fade .section-inner #action-form {
+
+.Signup .bg-blue_opaque-fade .section-inner #action-form,
+.Petition .bg-blue_opaque-fade .section-inner #action-form,
+.Letter .bg-blue_opaque-fade .section-inner #action-form {
   margin: auto;
 }
-.bg-blue_opaque-fade .section-inner p {
+
+.Signup .bg-blue_opaque-fade .section-inner p,
+.Petition .bg-blue_opaque-fade .section-inner p,
+.Letter .bg-blue_opaque-fade .section-inner p {
   font-family: Klima, -apple-system-, BlinkMacSystemFont, Arial, sans-serif;
 }
-.bg-blue_opaque-fade .section-inner .highlight {
+
+.Signup .bg-blue_opaque-fade .section-inner .highlight,
+.Petition .bg-blue_opaque-fade .section-inner .highlight,
+.Letter .bg-blue_opaque-fade .section-inner .highlight {
   border-radius: 8px;
   background: #144872;
   height: 52px;
@@ -4475,7 +4492,10 @@ label.ak-survey-radio-choice {
   font-weight: 647;
   line-height: normal;
 }
-.bg-blue_opaque-fade .section-inner #action-title {
+
+.Signup .bg-blue_opaque-fade .section-inner #action-title,
+.Petition .bg-blue_opaque-fade .section-inner #action-title,
+.Letter .bg-blue_opaque-fade .section-inner #action-title {
   margin-top: 25px;
   color: #FFF;
   font-size: 58px;
@@ -5065,12 +5085,16 @@ input:checked+.toggle-donation-type .toggle-option-2 {
   flex: 1;
 }
 
-@media screen and (max-width:900px) {
-  #action-lead.bg-blue_opaque-fade  {
+@media screen and (max-width: 900px) {
+  .Signup #action-lead.bg-blue_opaque-fade,
+  .Petition #action-lead.bg-blue_opaque-fade,
+  .Letter #action-lead.bg-blue_opaque-fade {
     padding: 16px;
   }
 
-  .bg-blue_opaque-fade .section-inner #action-header{
+  .Signup .bg-blue_opaque-fade .section-inner #action-header,
+  .Petition .bg-blue_opaque-fade .section-inner #action-header,
+  .Letter .bg-blue_opaque-fade .section-inner #action-header {
     margin: auto;
     max-width: 650px;
   }
@@ -5081,25 +5105,35 @@ input:checked+.toggle-donation-type .toggle-option-2 {
   #action-after-header {
     padding: 4rem;
   }
-  .bg-blue_opaque-fade .section-inner {
-    padding: 0;
+  .Signup .bg-blue_opaque-fade .section-inner,
+  .Petition .bg-blue_opaque-fade .section-inner,
+  .Letter .bg-blue_opaque-fade .section-inner {
+    padding: 0 0 32px;
     border-radius: 0;
     z-index: 20;
     top: 228px;
     background: linear-gradient(180deg, rgba(15, 129, 233, 0.00) 0%, #0F81E9 5%);
   }
-  .bg-blue_opaque-fade .section-inner #action-header{
+
+  .Signup .bg-blue_opaque-fade .section-inner #action-header,
+  .Petition .bg-blue_opaque-fade .section-inner #action-header,
+  .Letter .bg-blue_opaque-fade .section-inner #action-header {
     max-width: 100%;
     padding: 0;
   }
-  .bg-blue_opaque-fade .section-inner #action-title {
+
+  .Signup .bg-blue_opaque-fade .section-inner #action-title,
+  .Petition .bg-blue_opaque-fade .section-inner #action-title,
+  .Letter .bg-blue_opaque-fade .section-inner #action-title {
     font-size: 43px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
   }
 
-  #body-mobile-background.bg-blue_opaque {
+  .Signup #body-mobile-background.bg-blue_opaque,
+  .Petition #body-mobile-background.bg-blue_opaque,
+  .Letter #body-mobile-background.bg-blue_opaque {
     height: 443px;
     width: calc(100% - 32px);
     left: 16px;
@@ -5108,9 +5142,11 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     top: 16px;
     z-index: 10;
   }
-  .body-blue_opaque{
+
+  body:is(.Signup, .Petition, .Letter).body-blue_opaque {
     background: #0F81E9;
   }
+
 }
 
 @media screen and (min-width:720px) {
@@ -5561,24 +5597,39 @@ a.bg-blue:hover {
 }
 
 /* Blue Opaque Colors */
-.bg-blue_opaque a,
-.bg-blue_opaque.text-color-override a {
+.Signup .bg-blue_opaque a,
+.Signup .bg-blue_opaque.text-color-override a,
+.Petition .bg-blue_opaque a,
+.Petition .bg-blue_opaque.text-color-override a,
+.Letter .bg-blue_opaque a,
+.Letter .bg-blue_opaque.text-color-override a {
   color: rgba(255, 255, 255, 0.75);
 }
 
 /* Link:hover Color */
-.bg-blue_opaque a:hover,
-.bg-blue_opaque.text-color-override a:hover {
+.Signup .bg-blue_opaque a:hover,
+.Signup .bg-blue_opaque.text-color-override a:hover,
+.Petition .bg-blue_opaque a:hover,
+.Petition .bg-blue_opaque.text-color-override a:hover,
+.Letter .bg-blue_opaque a:hover,
+.Letter .bg-blue_opaque.text-color-override a:hover {
   color: rgba(255, 255, 255, 0.3);
 }
 
 /* Button Text Color */
-a.bg-blue_opaque, .bg-blue_opaque-fade a {
+.Signup a.bg-blue_opaque,
+.Signup .bg-blue_opaque-fade a,
+.Petition a.bg-blue_opaque,
+.Petition .bg-blue_opaque-fade a,
+.Letter a.bg-blue_opaque,
+.Letter .bg-blue_opaque-fade a {
   color: #ffffff;
 }
 
 /* Button:hover Text Color */
-a.bg-blue_opaque:hover {
+.Signup a.bg-blue_opaque:hover,
+.Petition a.bg-blue_opaque:hover,
+.Letter a.bg-blue_opaque:hover {
   color: rgba(255, 255, 255, 0.75);
 }
 
